# mypdns-hosts2rpz

./: CHANGELOG.md  Dockerfile.centos  Dockerfile.ubuntu  LICENSE  README.md  hosts2rpz.py  mypdns-hosts2rpz.code-workspace  setup.cfg
.github/workflows/: main.yml
config/: rpz-loggers.ini
test/: test_data.py
test/system/: tests.py
test/unit/: tests.py
