[metadata]
name = mypdns-hosts2rpz
version = attr: mypdns_hosts2rpz.VERSION
author = Spirillen
author-email = pdns@protonmail.com
home-page = https://github.com/DNS-RPZ/mypdns-hosts2rpz
description = Convert dumb hosts formatted files into modern response policy zones
long-description = file: README.md
long_description_content_type = text/markdown
keywords = dns,rpz,rpz-feed,pihole
license = AGPLv3
license-file = LICENSE
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: POSIX
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: Name Service (DNS)
    Topic :: System :: Operating System Kernels :: Linux
project_urls =
    Changelog = https://github.com/DNS-RPZ/mypdns-hosts2rpz/blob/master/CHANGELOG.md

[options]
zip_safe = true
python_requires = >= 3.6
py_modules = mypdns_hosts2rpz

[options.entry_points]
console_scripts =
    mypdns-hosts2rpz = mypdns_hosts2rpz:main

[bdist_wheel]
universal = true

[sdist]
formats = gztar
